CHANGE PageDesign, ItemListWidget - add component call for CategoryItem.twig

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -11,9 +11,10 @@
 {{ component( "Ceres::Customer.Components.ForgotPassword" ) }}
 
 {# TODO: remove if shop builder pages can be rebuild by migrations #}
-{{ component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
 {{ component( "Ceres::Containers.Components.ContainerItemList" ) }}
 {{ component( "Ceres::Containers.Components.LastSeenItemList" ) }}
+{{ component( "Ceres::ItemList.Components.CategoryItem") }}
+{{ component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
 {{ component( "Ceres::PageDesign.Components.Carousel" ) }}
 
 {% if request.get('isContentBuilder') == 1 %}
