--- a/resources/views/Homepage/DefaultHomepage.twig
+++ b/resources/views/Homepage/DefaultHomepage.twig
@@ -157,13 +157,13 @@
                                         {% endfor %}
                                     </ol>
 
-                                    <a class="left carousel-control" href="#carousel-example-generic" role="button"
+                                    <a class="left carousel-control carousel-control-prev" href="#carousel-example-generic" role="button"
                                        data-slide="prev">
                                         <span class="icon-prev" aria-hidden="true"></span>
                                         <span class="sr-only">{{ trans("Ceres::Template.homepageBack") }}</span>
                                     </a>
 
-                                    <a class="right carousel-control" href="#carousel-example-generic" role="button"
+                                    <a class="right carousel-control carousel-control-next" href="#carousel-example-generic" role="button"
                                        data-slide="next">
                                         <span class="icon-next" aria-hidden="true"></span>
                                         <span class="sr-only">{{ trans("Ceres::Template.homepageNext") }}</span>
