--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -16,9 +16,9 @@
                 </div>
             {% endfor %}
         </div>
-        <a class="left carousel-control" href="#carousel-example" data-slide="prev"><i
+        <a class="left carousel-control carousel-control-prev" href="#carousel-example" data-slide="prev"><i
                     class="icon-prev  fa fa-angle-left"></i></a>
-        <a class="right carousel-control" href="#carousel-example" data-slide="next"><i
+        <a class="right carousel-control carousel-control-next" href="#carousel-example" data-slide="next"><i
                     class="icon-next fa fa-angle-right"></i></a>
     </div>
 
