--- a/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
@@ -101,9 +101,14 @@
 
             li
             {
-                width: 10px;
-                height: 10px;
-                margin: 1px;
+                /* Bootstrap override */
+                box-sizing: border-box;
+                border-radius: .8rem;
+                width: .8rem;
+                height: .8rem;
+                margin: 2px;
+                border: 1px solid #fff;
+                background-color: transparent;
             }
         }
 
