--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -180,7 +180,7 @@ $custom-control-indicator-focus-box-shadow:     0 0 0 .075rem #fff, 0 0 0 .2rem 
 $custom-control-indicator-active-color:         #fff !default;
 $custom-control-indicator-active-bg:            #84c6ff !default;
 
-$custom-checkbox-indicator-indeterminate-bg:    #0074d9 !default
+$custom-checkbox-indicator-indeterminate-bg:    #0074d9 !default;
 
 $custom-select-padding-y:                       .8rem;
 $custom-select-padding-x:                       1rem;
