--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -24070,9 +24070,14 @@ html.ie .widget-image-box .img-cover {
 }
 
 .widget-image-carousel .widget-inner .carousel-indicators li {
-  width: 10px;
-  height: 10px;
-  margin: 1px;
+  /* Bootstrap override */
+  box-sizing: border-box;
+  border-radius: .8rem;
+  width: .8rem;
+  height: .8rem;
+  margin: 2px;
+  border: 1px solid #fff;
+  background-color: transparent;
 }
 
 .widget-image-carousel .widget-inner .carousel-control {
@@ -24262,10 +24267,6 @@ html.ie .widget-image-carousel .widget-inner .carousel-item .img-cover {
 .widget-item-list .widget-inner {
   padding-left: 0;
   padding-right: 0;
-}
-
-.widget-item-list .widget-inner .row {
-  display: block;
 }
 
 .widget-item-list .widget-caption {
