--- a/resources/views/Item/Components/VariationSelect.twig
+++ b/resources/views/Item/Components/VariationSelect.twig
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-xs-12 col-md-6 col-lg-4 variation-select" v-for="(attribute, attributeId) in attributes">
             <div class="input-unit" ref="labelBoxRef">
-                <select class="custom-select text-gray-dark" v-model="selectedAttributes[attributeId]" @change="onSelectionChange(selectedAttributes[attributeId])">
+                <select class="custom-select" v-model="selectedAttributes[attributeId]" @change="onSelectionChange(selectedAttributes[attributeId])">
                         <option :value="null" v-if="hasEmptyOption">{{ trans("Ceres::Template.singleItemPleaseSelect") }}</option>
                         <option
                             v-for="(attributeValue, attributeValueId) in attribute.values"
@@ -17,7 +17,7 @@
 
         <div class="col-xs-12 col-md-6 col-lg-4 variation-select" v-if="possibleUnitIds.length > 1">
             <div class="input-unit">
-                <select class="custom-select text-gray-dark" v-model="selectedUnitId" @change="onSelectionChange(possibleUnitIds[selectedUnitId])">
+                <select class="custom-select" v-model="selectedUnitId" @change="onSelectionChange(possibleUnitIds[selectedUnitId])">
                     <option :value="0" v-if="hasEmptyOption">{{ trans("Ceres::Template.singleItemPleaseSelect") }}</option>
                     <option
                             v-for="unitCombinationId in possibleUnitIds"
