--- a/resources/views/Customer/Components/Contact/AcceptPrivacyPolicyCheck.twig
+++ b/resources/views/Customer/Components/Contact/AcceptPrivacyPolicyCheck.twig
@@ -1,14 +1,14 @@
 <script type="x/template" id="vue-accept-privacy-policy-check">
-    <label class="form-check-label" for="privacy-policy-accept" :class="{ 'error': showError }">
-        <input class="form-check-input" type="checkbox" id="privacy-policy-accept" :checked="value" @change="onValueChanged($event.target.checked)">
-        {% autoescape false %}
-            {% set policyContent %}<!--
-                --><a href="{{ urls.privacyPolicy }}" target="_blank">
-                    <span>{{ trans("Ceres::Template.contactPrivacyPolicy", {"hyphen": "&shy;"}) }}</span>
-                </a><!--
-            -->{% endset %}
-
-            {{ trans("Ceres::Template.contactAcceptPrivacyPolicy", {"policy": policyContent}) }}
-        {% endautoescape %}
-    </label>
+    <div class="form-check">
+        <label class="form-check-label" for="privacy-policy-accept" :class="{ 'error': showError }">
+            <input class="form-check-input" type="checkbox" id="privacy-policy-accept" :checked="value" @change="onValueChanged($event.target.checked)">
+            {% autoescape false %}
+                {% set policyContent %}
+                    <a href="{{ urls.privacyPolicy }}" target="_blank">
+                        <span>{{ trans("Ceres::Template.contactPrivacyPolicy", {"hyphen": "&shy;"}) }}</span>
+                    </a>{% endset %}
+                {{ trans("Ceres::Template.contactAcceptPrivacyPolicy", {"policy": policyContent}) }}
+            {% endautoescape %}
+        </label>
+    </div>
 </script>
