--- a/resources/views/Newsletter/Components/NewsletterInput.twig
+++ b/resources/views/Newsletter/Components/NewsletterInput.twig
@@ -37,11 +37,11 @@
                         <input type="checkbox" class="form-check-input" :id="'privacy-policy-accept-id_' + _uid" name="privacy-policy-accept" v-model="privacyPolicyValue">
                         <small>
                             {% autoescape false %}
-                                {% set policyContent %}<!--
-                                    --><a href="{{ urls.privacyPolicy }}" target="_blank">
+                                {% set policyContent %}
+                                    <a href="{{ urls.privacyPolicy }}" target="_blank">
                                         <span class="btn-link">{{ trans("Ceres::Template.checkoutPrivacyPolicy", {"hyphen": "&shy;"}) }}</span>
-                                    </a><!--
-                                -->{% endset %}
+                                    </a>
+                                {% endset %}
                                 {{ trans('Ceres::Template.newsletterAcceptPrivacyPolicy', {"policy": policyContent} ) }}
                             {% endautoescape %}
                         </small>
