--- a/resources/views/PageDesign/Components/Notifications.twig
+++ b/resources/views/PageDesign/Components/Notifications.twig
@@ -2,7 +2,7 @@
 
 <script type="x/template" id="vue-notifications">
     <div class="notification-wrapper">
-        <div v-for="notification in notifications" :class="'alert alert-dismissible fade in alert-' + notification.context" role="alert">
+        <div v-for="notification in notifications" :class="'alert alert-dismissible fade in show alert-' + notification.context" role="alert">
             <button type="button" class="close" aria-label="Close" @click="notification.close()">
                 <span aria-hidden="true">&times;</span>
             </button>
