fixed header padding

--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -18382,6 +18382,12 @@ html.ie #thumb-carousel .owl-stage .owl-item img {
   background-color: #4D4F4D;
 }
 
+@media (min-width: 576px) {
+  .wrapper-main #page-header .container-max {
+    padding: 0;
+  }
+}
+
 @media (min-width: 768px) {
   .wrapper-main #page-header {
     box-shadow: none;
