--- a/resources/views/Customer/Components/Contact/ContactForm.twig
+++ b/resources/views/Customer/Components/Contact/ContactForm.twig
@@ -26,7 +26,7 @@
 			<div class="row">
 
                 {% if contactConfigSet %}
-					<div class="col-xs-12 {% if googleApiKey %}col-md-6 pt-4 {% else %}col-sm-12 col-md-4 col-lg-3 {% endif %}pb-5">
+					<div class="col-xs-12 pb-5{% if googleApiKey %} col-md-6 pt-4{% else %} col-sm-12 col-md-4 col-lg-3{% endif %}">
 					{% include "Ceres::Customer.Components.Contact.ContactCard" %}
 					</div>
                 {% endif %}
@@ -37,8 +37,8 @@
 					</div>
                 {% endif %}
 
-				<div class="col-xs-12 px-0 {% if contactConfigSet and not googleApiKey %}col-sm-12 col-md-8 col-lg-9 {% endif %}well well-sm">
-					<form id="contact-form">
+				<div class="col-xs-12{% if contactConfigSet and not googleApiKey %} col-sm-12 col-md-8 col-lg-9{% endif %}">
+					<form id="contact-form" class="row">
 
 						<div class="col-xs-12 col-md-6 mb-3">
 							<div class="input-unit input-name-field">
@@ -92,8 +92,10 @@
 				</div>
 
 				<div class="col-xs-12 col-md-9">
-					<input class="mailToMe" id="cc" type="checkbox" v-model="cc" value="cc" name="mailToMe">
-					<label for="cc">{{ trans("Ceres::Template.contactSendMeACopy") }}</label>
+					<label class="form-check-label custom-control">
+						<input class="form-check-input" type="checkbox" v-model="cc" value="cc" name="mailToMe">
+						{{ trans("Ceres::Template.contactSendMeACopy") }}
+					</label>
 				</div>
 
 				<div class="col-xs-12">
